<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/id" />

    <EditText
        android:id="@+id/edt_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_id" />

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_nombre" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_nombre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email" />

    <TextView
        android:id="@+id/txt_alta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alta" />

    <EditText
        android:id="@+id/edt_alta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_alta" />

    <Button
        android:id="@+id/btn_insertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_alta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/insertar" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_insertar"
        android:layout_toRightOf="@id/btn_insertar"
        android:text="@string/modificar" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_modificar"
        android:layout_toRightOf="@id/btn_modificar"
        android:text="@string/borrar" />

    <Button
        android:id="@+id/btn_obtener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obtener"
        android:layout_below="@+id/btn_insertar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_listar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_obtener"
        android:layout_toRightOf="@id/btn_obtener"
        android:text="@string/listar" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/btn_obtener"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:id="@+id/lv_usuarios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_resultado" />

</RelativeLayout>
